# DILMaster

./: .gitignore  CMakeLists.txt
apps/dambreak3d/: CMakeLists.txt  main.cu
bug_log/: ibm_troubleshooting_guide.md  odd_even_buffer.md  velocity_write_invalidity.md
dem_test/: CMakeLists.txt  test_dem_fundamentals.txt
dem_test/ibm_dem_collision/: IBMDEMCollisionScenario.hpp  IBMToDEMStrategy.hpp  collision_case.yaml  ibm_dem_collision_test.cu
dem_test/lbm_dem_sedimentation/: LBMToDEM_UnresolvedStrategy.hpp  SedimentationScenario.hpp  lbm_dem_sedimentation_test.cu  lbm_dem_sedimentation_test.txt  sedimentation_case.yaml
ib_test/: CMakeLists.txt  ibm_capsule3d_st_translate.cu  ibm_capsule3d_st_translate_fs.cu  ibm_capsule_drag3d_stl.cu  ibm_couette3d.cu  ibm_poiseuille3d.cu  ibm_sphere_drag3d.cu  ibm_sphere_translate3d.cu  test_ibm_fundamentals.cu  test_ibm_mdf.cu
ib_test/diagnostics/: free_surface_diagnostics.cuh
lbm_test/: CMakeLists.txt
lbm_test/common/: ScenarioRunner.cpp  ScenarioRunner.hpp
lbm_test/dambreak3d/: CMakeLists.txt  main.cu
lbm_test/hydrostatic_column/: CMakeLists.txt  main.cu
lbm_test/sloshing/: CMakeLists.txt  main.cu
ref/: VTKService.cpp
src/core/: Config.hpp  FieldStore.hpp  StepContext.hpp
src/geometry/: IBMMarker.h  MassProperties.h  STLGeometryLoader.cpp  STLGeometryLoader.hpp  STLReader.h  STLValidation.h  VectorTypes.h
src/physics/: ISolver.hpp
src/physics/dem/: DEMConfig.hpp  DEMCore.cu  DEMCore.hpp  DEMCore.txt  DEMSolver.cu  DEMSolver.hpp  DEMSolver.txt
src/physics/ibm/: IBMCore.cu  IBMCore.hpp  IBMKernel.h  IBMKernelValidation.h  IBMMotion.cpp  IBMMotion.hpp  IBMSolver.cu  IBMSolver.hpp
src/physics/lbm/: BufferHandle.hpp  FreeSurfaceModule.cu  FreeSurfaceModule.hpp  ILBMModule.hpp  LBMConfig.hpp  LBMConstants.hpp  LBMCore.cu  LBMCore.hpp  LBMMemoryManager.cu  LBMMemoryManager.hpp  LBMSolver.cu  LBMSolver.hpp
src/physics/lbm/cuda/: LBMBackend.cu  LBMBackend.hpp  LBMDeviceConstants.cu  LBMDeviceConstants.cuh  LBMKernelHelpers.cuh  LBMKernels.cu  LBMTypes.cuh  cuda_utils.hpp
src/services/: IService.hpp  MarkerVTKService.cpp  MarkerVTKService.hpp  MeshVTKService.cpp  MeshVTKService.hpp  VTKService.cpp  VTKService.hpp
tools/: capsule.stl  gen_capsule_stl.cpp  propeller_no_stick.stl
